--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "es6-promise": "^3.1.2",
+        "js-cookie": "^2.2.0",
         "lodash": "^4.5.1",
         "radium": "^0.16.6",
         "react-ace": "^5.9.0",
